--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@angular/platform-browser": "8.0.0",
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
-    "core-js": "3.1.3",
+    "core-js": "^3.1.3",
     "hammerjs": "2.0.8",
     "rxjs": "6.5.2",
     "web-animations-js": "2.3.1",
